# lke-bot

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  package.json
bot/: Cargo.toml
bot/src/: main.rs
bot/src/commands/: automod.rs  custom_commands.rs  help.rs  leveling.rs  mod.rs  music.rs  ping.rs  reaction_roles.rs  roll.rs  ticket.rs  userinfo.rs
bot/src/events/: automod.rs  custom_commands.rs  leveling.rs  mod.rs  reaction_roles.rs  welcome.rs
bot/src/locales/: de.json  en.json
migrations/: 20240107000000_leveling.sql  20240108000000_welcome.sql  20240109000000_custom_commands.sql  20240110000000_reaction_roles.sql  20240111000000_music_queue.sql
shared/: Cargo.toml
shared/migrations/: 20240101000000_create_users.sql  20240102000000_create_bot_settings.sql  20240103000000_create_tickets.sql  20240104000000_create_moderation.sql  20240105000000_create_tts.sql  20240106000000_create_music.sql
shared/src/: config.rs  db.rs  error.rs  lib.rs  models.rs  repository.rs
web/: Cargo.toml
web/src/: main.rs  session.rs
web/src/routes/: auth.rs  dashboard.rs  index.rs  mod.rs  settings.rs  settings_pages.rs
web/src/templates/: dashboard.rs  index.rs  mod.rs
web/src/templates/settings/: bot.rs  leveling.rs  mod.rs  moderation.rs  music.rs  tickets.rs  tts.rs  welcome.rs
