[workspace]
members = ["bot", "web", "shared"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
image = "0.25"
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
once_cell = "1.19"
rust-i18n = "3"
