[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
tokio = { workspace = true }
sqlx = { workspace = true }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tower-sessions = "0.15.0"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
rand = "0.10.0"
sha2 = "0.10"
urlencoding = "2.1"
time = "0.3"
hex = "0.4"
chrono = "0.4"
